# drift-guard-engine

./: .dockerignore  .gitignore  .goreleaser.yaml  .vercelignore  Dockerfile  Dockerfile.playground  Makefile  README.md  action.yml  compose.yaml  diffengine  fly.toml  go.mod  go.sum
.claude-plugin/: .mcp.json  plugin.json
.github/workflows/: ci.yml  deploy-vercel.yml  pull_request.yml  release.yml
action/compare/: action.yml
action/impact-check/: action.yml
action/install-binary/: action.yml
action/setup-database/: action.yml
action/setup-deps/: action.yml
action/update-pages/: action.yml  update_log.py
cmd/diffengine/: main.go
cmd/drift-agent/: compare.go  files.go  files_test.go  gen.go  impact.go  main.go  ui.go  ui_test.go
cmd/drift-guard/: compare.go  compare_test.go  gen.go  generate.go  impact.go  main.go  ui.go
cmd/driftabot/: compare.go  files.go  main.go  (+3 more)
docs/: ai-agent.md  api-drift-agent.md  ci.md  cli.md  development.md  generating-specs.md  grpc-server.md  index.md  install.md  mcp.md  microservices.md  npm.md  output-formats.md  package-lock.json  package.json  playground.md  sdk.md  supported.md  tour.md  usage.md
drift-guard-agent/: pyproject.toml
drift-guard-agent/drift_guard_agent/: __init__.py  cli.py  graph.py  state.py
drift-guard-agent/drift_guard_agent/nodes/: discover.py  explain.py  fetch.py  human_review.py  ingest.py  notify.py  remediate.py  scan.py  triage.py
make/: deploy.mk
npm/: README.md  index.d.ts  index.js  install.js  package.json  run.js
playground/: next.config.ts  package-lock.json  package.json
(+103 files in other folders)
